# GuardPilot

./: .dockerignore  .gitignore  Dockerfile  README.md  README.zh-CN.md  netlify.toml  package.json  render.yaml  vercel.json
guardpilot/: .env.example  LICENSE  Makefile  README.md  README.zh-CN.md  docker-compose.yml
guardpilot/apps/api/: pyproject.toml
guardpilot/apps/api/guardpilot/: config.py  main.py  main_app.py
guardpilot/apps/api/guardpilot/api/: routes_agents.py  routes_bitget.py  routes_health.py  routes_intents.py  routes_logs.py  routes_replay.py  routes_reports.py  routes_trades.py
guardpilot/apps/api/guardpilot/core/: market_context.py  metrics.py  paper_engine.py  replay_engine.py  risk_engine.py  scoring.py
guardpilot/apps/api/guardpilot/demo_agents/: momentum_agent.py
guardpilot/apps/api/guardpilot/integrations/: agent_hub_adapter.py  bitget_adapter.py  bitget_market_data.py
guardpilot/apps/api/guardpilot/models/: account.py  intent.py  order.py  position.py  report.py  risk.py
guardpilot/apps/api/guardpilot/storage/: database.py  jsonl_logger.py  repositories.py
guardpilot/apps/api/guardpilot/tests/: test_market_data.py  test_paper_engine.py  test_replay.py  test_risk_engine.py  test_routes.py
guardpilot/docs/: api_reference.md  architecture.md  bitget_integration_boundary.md  demo_script.md  deployment.md  evidence.md  final_submission_packet.md  one_command_demo.md  recording_guide.md  submission_checklist.md
guardpilot/reports/: demo_report.html  (+2 more)
scripts/: bitget-agent-sidecar.sh  dev.sh  judge-demo.sh  record-demo.sh  setup.sh
(+43 files in other folders)
