[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardpilot"
version = "0.1.0"
description = "Risk gateway and paper trading evaluation sandbox for autonomous trading agents"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "PyYAML>=6.0.0"
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "httpx2>=0.1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["guardpilot*"]
